--- a/5-multitenancy.yml
+++ b/5-multitenancy.yml
@@ -6,12 +6,18 @@
     - shell: "hostname | awk -F. '{ print $2 }'"
       register: varguid
 
+- name: Label nodes with appropriate clients zones
+  hosts: localhost
+  tasks:
+    - shell: "oc label node node1.{{ varguid.stdout }}.internal zone=alpha"
+    - shell: "oc label node node2.{{ varguid.stdout }}.internal zone=beta"
+
 - name: Create Alpha, Beta and Common projects
   hosts: localhost
   tasks:
     - shell: "oc new-project common --display-name='Common project'"
-    - shell: "oc new-project alpha --display-name='Alpha Corp'"
-    - shell: "oc new-project beta --display-name='Beta Corp'"
+    - shell: "oc adm new-project alpha --display-name='Alpha Corp' --node-selector='zone=alpha'"
+    - shell: "oc adm new-project beta --display-name='Beta Corp' --node-selector='zone=beta'"
 
 - name: Creation of users for Alpha and Beta clients - with_list
   hosts: masters
@@ -48,12 +54,6 @@
     - name: Create single clusterquota per user
       shell: "oc create clusterquota clusterquota-\"{{ item }}\" --project-annotation-selector=openshift.io/requester=\"{{ item }}\" --hard pods=25 --hard requests.memory=6Gi --hard requests.cpu=5 --hard limits.cpu=25 --hard limits.memory=40Gi --hard configmaps=25 --hard persistentvolumeclaims=25 --hard services=25"
       with_items: "{{ tenants }}"
-
-- name: Label nodes with appropriate clients zones
-  hosts: localhost
-  tasks:
-    - shell: "oc label node node1.{{ varguid.stdout }}.internal zone=alpha"
-    - shell: "oc label node node2.{{ varguid.stdout }}.internal zone=beta"
 
 - name: Create template
   hosts: localhost
